--- a/locale/template.txt
+++ b/locale/template.txt
@@ -5,8 +5,8 @@ Get number of items being sold.=
 <item name>=
 Usage: /smstats <item name>=
 No stats on @1.=
-Number of items: @1@@Number of shops offering item: @2=
-@@Average price: @1=
+Number of items: @1@nNumber of shops offering item: @2=
+@nAverage price: @1=
 Recreates the smartshop-visuals in your surroundings.=
 Removed @1 smartshop entities and refreshed @2 shops in @3 ms.=
 Error: The owner's stock is full, can't receive, exchange aborted.=
@@ -14,7 +14,7 @@ Error: @1 is sold out.=
 Error: You don't have enough in your inventory to buy this, exchange aborted.=
 Error: Your inventory is full, exchange aborted.=
 Your stock is limited.=
-Your stock is unlimited.@@Paid items are trashed.=
+Your stock is unlimited.@nPaid items are trashed.=
 Toggle limit=
 Toggle limit of stock.=
 Customer=
@@ -30,4 +30,3 @@ Statistics are disabled.=
 Could not write to file.=
 Report file written.=
 Unknown Item=
-
